--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Cecilia Diaz's Portfolio</title>
 </head>
+
 <body>
+    <header>
+        <img src="./profile-pic.jpg" alt="Cecilia Diaz picture" id="profile-pic" />
+        <h1>Cecilia Diaz</h1>
+        <h2>Portfolio</h2>
+        <section>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+            </ul>
+        </section>
+    </header>
+    <section class="header-image"></section>
+    <section class="content">
+        <article class="about-me" id="about-me">
+            <h2>About Me</h2>
+            <p>Hello and welcome to my portfolio!</p>
+            <p>I'm Cecilia, a former teacher and future web developer based in San Diego.
+                I taught elementary school for 9 years, created and implemented curriculum for lower grades. </p>
+            <p>Now I'm looking forward to a new career as a web developer!</p>
+        </article>
+        <article class="work" id="work">
+            <h2>Work</h2>
+            <div>
+                <h3 id="one">Project 1</h3>
+                <img src="./Project-1.jpg" alt="coming-soon-1" class="center" id="project-1" />
+            </div>
+            <div class="other">
+                <h3 id="two">Project 2</h3>
+                <img src="./project-2.jpg" alt="coming-soon-2" id="project-2" />
+            </div>
+            <div class="other">
+                <h3 id="three">Project 3</h3>
+                <img src="./project-3.png" alt="coming-soon-3" id="project-3" />
+            </div>
+        </article>
+        <article class="contact-me" id="contact-me">
+            <h2>Contact Me</h2>
+
+                <ul>
+                    <li>507-351-6357</li>
+                    <li>
+                        <a href="https://github.com/ceciliadiazd">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/">linkedin</a>
+                    </li>
+                </ul>
     
+        </article>
+
+    </section>
+
 </body>
+
 </html>
